tests/baselines/reference/jsdocAugments_nameMismatch.errors.txt
/b.js(4,15): error TS8023: JSDoc '@augments' tag declares to extend 'A', but actual class augments 'B'.


==== /b.js (1 errors) ====
    class A {}
    class B {}
    
    /** @augments A */
                  ~
!!! error TS8023: JSDoc '@augments' tag declares to extend 'A', but actual class augments 'B'.
    class C extends B {}
    